# procedra

./: .env.example  .gitignore  LICENSE  README.md  build.sh  bun.lockb  flake.nix  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
.github/workflows/: deploy.yml
prisma/: schema.prisma
prisma/migrations/20240110190722_init/: migration.sql
prisma/migrations/20240112185838_update_asset/: migration.sql
prisma/migrations/20240114120205_update/: migration.sql
prisma/migrations/20240120102730_update/: migration.sql
prisma/migrations/20240120131111_add_like/: migration.sql
prisma/migrations/20240212165650_update_user/: migration.sql
src/: app.html  app.pcss  hooks.server.ts
src/lib/: highlight.ts
src/lib/assets/: terrain.webm
src/lib/components/: asset-card.svelte  background-gradient.svelte  dark-mode-toggle-button.svelte  footer.svelte  github-ribbon.svelte  header.svelte  hero-section.svelte  loading-bar.svelte  mobile-menu.svelte  profile-popover.svelte  search-filter.svelte  sign-in-dialog.svelte  util.svelte
src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
src/routes/asset/: +server.ts
src/routes/browse/: +page.server.ts  +page.svelte
src/routes/dev/: +page.svelte
src/routes/generate/: +page.svelte
src/routes/like/: +server.ts
src/routes/manage/: +layout.server.ts  +page.server.ts  +page.svelte
src/routes/publish/: +page.server.ts
src/routes/theme/: +server.ts
utils/: Cargo.toml
utils/map/: Cargo.toml
utils/planet/: Cargo.toml
utils/terrain/: Cargo.toml
utils/terrain/src/: main.rs
(+25 files in other folders)
