[package]
name = "terrain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy_egui = "0.24.0"
bevy_generative = { git = "https://github.com/manankarnik/bevy_generative.git" }
bevy_panorbit_camera = { version = "0.10.0", features = ["bevy_egui"] }
image = "0.24.8"
serde_json = "1.0.111"
wasm-bindgen = "0.2.89"
